--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   background-attachment: fixed;
   
   background-size: cover;
+  background-color: #44AEFE;
 }
 
 .App-logo {
@@ -103,4 +104,17 @@ img {
 
 #aws_django {
   border-radius: 10%;
+}
+
+#downloadButton {
+  background-color: #44AEFE;
+  color:aliceblue;
+  border-radius: 5px;
+  border: none;
+  height: 5vh;
+  font-weight: bold;
+}
+
+html {
+  background-color: #44AEFE;
 }
